<resources>
    <string name="app_name">LinguaMaster</string>
    <string name="reading_girl">Reading girl</string>
    <string name="lingua">Lingua</string>
    <string name="master">Master</string>
    <string name="learn_words_everywhere">Learn words everywhere</string>
    <string name="welcome_text">Turn your flashcards into practice tests.\\nThis is the easiest way to learn, practice and master words through various learning and testing modes.</string>
    <string name="get_started">Get started</string>
    <string name="login">Login</string>
    <string name="background_login">background image for login page</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_with">Or sign with</string>
    <string name="description_sign_in_google">Button for login with google</string>
    <string name="description_sign_in_facebook">Button for login with facebook</string>
    <string name="description_sign_in_x">Button for login with x</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="or_sign_up_with">- Or Sign Up with -</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="background_card_of_sets">Background card of sets</string>
    <string name="example_history_12">History 12</string>
    <string name="example_227_terms">227 terms</string>
    <string name="example_nickname">hoachbeckett</string>
    <string name="description_circle">Background circle for card of set</string>
    <string name="linguamaster">LinguaMaster</string>
    <string name="your_sets">Your sets</string>
    <string name="view_all">View all</string>
    <string name="public_sets">Public sets</string>
    <string name="daily_word_from_your_sets">Daily word</string>
    <string name="example_word">Frequently</string>
    <string name="get">Search</string>
    <string name="example_translate">Translate</string>
    <string name="description_background_create_set">Background for header of set name</string>
    <string name="name_of_the_set">Name of the set</string>
    <string name="name_of_set">Name</string>
    <string name="word">Word</string>
    <string name="background_word_card">Background for item word and translate</string>
    <string name="translate">Translate</string>
    <string name="done">Done</string>
    <string name="description_add_button">button for add new item with word and translate</string>
    <string name="logout">LogOut</string>
    <string name="public_set">Public set</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_info">Profile info</string>
    <string name="preferences">Preferences</string>
    <string name="language">Language</string>
    <string name="darkmode">Darkmode</string>
    <string name="change_picture">Change Picture</string>
    <string name="update">Update</string>

    <string name="username">Username: </string>
    <string name="email">Email: </string>
    <string name="phone_number">Phone number: </string>
    <string name="premium">Premium: </string>
    <string name="date_of_birth">Date of birth: </string>
    <string name="image_for_background_style">Image for background style</string>
    <string name="image_for_avatar">Image for avatar</string>
    <string name="image_for_return_back_to_last_page">Image for return back to last page</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="old_email_if_you_want_change_email_or_password">Old Email(If you want change email or password)</string>
    <string name="new_email">New Email</string>
    <string name="old_password">Old password</string>

</resources>