<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="55dp" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_background_login"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_to_your_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="28dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/background_login" />

    <TextView
        android:id="@+id/tv_login_to_your_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="286dp"
        android:text="@string/login_to_your_account"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="43dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_to_your_account"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_background_edit_text"
        android:autofillHints="Email"
        android:labelFor="@id/tv_login_to_your_account"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="43dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:background="@drawable/ic_background_edit_text"
        android:layout_marginTop="15dp"
        android:autofillHints="Password"
        android:labelFor="@id/tv_login_to_your_account"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:background="@drawable/ic_background_button"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@color/white"
        style="?android:attr/borderlessButtonStyle"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/tv_or_sign_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_with"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        android:layout_marginTop="63dp"
        android:textSize="16sp"/>

    <ImageButton
        android:id="@+id/btn_sign_in_google"
        android:layout_width="90dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_or_sign_with"
        android:background="@drawable/ic_background_button"
        android:src="@drawable/ic_google"
        android:maxWidth="30dp"
        android:maxHeight="30dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/description_sign_in_google"
        style="?android:attr/borderlessButtonStyle" />

    <ImageButton
        android:id="@+id/btn_sign_in_facebook"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_background_button"
        android:src="@drawable/ic_facebook"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:contentDescription="@string/description_sign_in_facebook"
        app:layout_constraintEnd_toStartOf="@+id/appCompatButton"
        app:layout_constraintStart_toEndOf="@id/btn_sign_in_google"
        app:layout_constraintTop_toBottomOf="@id/tv_or_sign_with"
        style="?android:attr/borderlessButtonStyle" />

    <ImageButton
        android:id="@+id/appCompatButton"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_background_button"
        android:src="@drawable/ic_x"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:contentDescription="@string/description_sign_in_x"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/tv_or_sign_with"
        style="?android:attr/borderlessButtonStyle" />

    <TextView
        android:id="@+id/tv_don_t_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in_facebook"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        android:layout_marginStart="83dp"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        android:textColor="#CCCCCC" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sign_up"
        android:textColor="#99C8FF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_don_t_have_account"
        app:layout_constraintStart_toEndOf="@id/tv_don_t_have_account"
        app:layout_constraintTop_toTopOf="@id/tv_don_t_have_account" />





</androidx.constraintlayout.widget.ConstraintLayout>