<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/register"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_create_your_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        android:layout_marginTop="144sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="43dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/tv_create_your_account"
        android:background="@drawable/ic_background_edit_text"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="43dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:background="@drawable/ic_background_edit_text"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:autofillHints="textEmailAddress"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="43dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:background="@drawable/ic_background_edit_text"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="0dp"
        android:layout_height="43dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:background="@drawable/ic_background_edit_text"
        android:layout_marginTop="15dp"
        android:hint="@string/confirm_password"
        android:autofillHints="confirm_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btm_sign_up"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_password"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_background_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"
        android:textAllCaps="false"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_or_sign_up_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_up_with"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/btm_sign_up"
        android:layout_marginTop="63dp" />

    <ImageButton
        android:id="@+id/btn_sign_up_google"
        android:layout_width="90dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_or_sign_up_with"
        android:background="@drawable/ic_background_button"
        android:src="@drawable/ic_google"
        android:maxWidth="30dp"
        android:maxHeight="30dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/description_sign_in_google"
        style="?android:attr/borderlessButtonStyle" />

    <ImageButton
        android:id="@+id/btn_sign_up_facebook"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_background_button"
        android:src="@drawable/ic_facebook"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:contentDescription="@string/description_sign_in_facebook"
        app:layout_constraintEnd_toStartOf="@+id/appCompatButton"
        app:layout_constraintStart_toEndOf="@id/btn_sign_up_google"
        app:layout_constraintTop_toBottomOf="@id/tv_or_sign_up_with"
        style="?android:attr/borderlessButtonStyle" />

    <ImageButton
        android:id="@+id/appCompatButton"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_background_button"
        android:src="@drawable/ic_x"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:contentDescription="@string/description_sign_in_x"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/tv_or_sign_up_with"
        style="?android:attr/borderlessButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>