<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_edit_profile_background_rectangle"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_for_background_style" />

    <TextView
        android:id="@+id/tv_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/iv_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="@id/tv_edit_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_edit_profile"
        android:layout_marginStart="17dp"
        android:contentDescription="@string/image_for_return_back_to_last_page" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="188dp"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circle_edit_text_background"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        android:contentDescription="@string/image_for_avatar" />

    <TextView
        android:id="@+id/tv_change_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/change_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_change_picture"
        android:layout_marginTop="21dp"
        android:layout_marginStart="36dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:background="@drawable/ic_background_edit_text"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        android:autofillHints="username"
        android:labelFor="@id/tv_username"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/et_username"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        android:layout_marginTop="19dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:background="@drawable/ic_background_edit_text"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:autofillHints="emailAddress"
        android:labelFor="@id/tv_email"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_password"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:layout_marginTop="19dp" />

    <EditText
        android:id="@+id/et_current_password"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:background="@drawable/ic_background_edit_text"
        app:layout_constraintStart_toStartOf="@id/tv_current_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/tv_current_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        app:layout_constraintStart_toStartOf="@id/et_current_password"
        app:layout_constraintTop_toBottomOf="@id/et_current_password"
        android:layout_marginTop="19dp" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:background="@drawable/ic_background_edit_text"
        app:layout_constraintStart_toStartOf="@id/tv_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/tv_new_password"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        app:layout_constraintStart_toStartOf="@id/et_new_password"
        app:layout_constraintTop_toBottomOf="@id/et_new_password"
        android:layout_marginTop="19dp" />

    <EditText
        android:id="@+id/et_date_of_birth"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:background="@drawable/ic_background_edit_text"
        app:layout_constraintStart_toStartOf="@id/tv_date_of_birth"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/tv_date_of_birth"
        android:autofillHints="" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:text="@string/update"
        android:layout_marginTop="35dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:background="@drawable/ic_background_button_profile"
        app:layout_constraintTop_toBottomOf="@id/et_date_of_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>